# ScienceArchives

./: .gitignore  .project  README.md  requirements.txt
vvvx_etl/: README.md  pyproject.toml  setup.cfg
vvvx_etl/etl/: bucketing.py  validate_source_detection_etl.py
vvvx_etl/example_data/detection/: .part-00005-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  part-00008-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  part-00009-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  part-00012-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet
vvvx_etl/example_data/source/: .part-00000-b75849f7-cedd-4d8d-85ab-a7ce7cbfa2cd-c000.snappy.parquet.crc  .part-00001-b75849f7-cedd-4d8d-85ab-a7ce7cbfa2cd-c000.snappy.parquet.crc  part-00000-b75849f7-cedd-4d8d-85ab-a7ce7cbfa2cd-c000.snappy.parquet  part-00003-b75849f7-cedd-4d8d-85ab-a7ce7cbfa2cd-c000.snappy.parquet
vvvx_etl/example_data/variability/: .part-00000-d16c1865-5857-4697-84e8-6d9b2fca0fc4-c000.snappy.parquet.crc  part-00000-d16c1865-5857-4697-84e8-6d9b2fca0fc4-c000.snappy.parquet  part-00002-d16c1865-5857-4697-84e8-6d9b2fca0fc4-c000.snappy.parquet
vvvx_etl/tests/: test_bucketing.py
vvx_etl/: README.md  pyproject.toml  setup.cfg  spark355.yaml
vvx_etl/etl/: source_detection_etl.py
vvx_etl/example_data/detection/: .part-00000-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00001-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00002-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00003-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00004-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00006-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00007-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00008-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00009-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00010-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00011-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00012-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  .part-00013-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet.crc  part-00000-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  part-00001-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  part-00002-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  part-00003-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  part-00004-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  part-00005-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  part-00006-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  part-00007-1c2e9aab-95b3-4979-bb2b-8ec055321d37-c000.snappy.parquet  (+3 more)
vvx_etl/src/: errors.py  source_detection_etl.py
vvx_etl/tests/: spark_fixture.py  test_array_columns.py  test_bucketing.py  test_source_detection_etl.py
vvx_etl/vvx-dagster/: Dockerfile  pyproject.toml
vvx_etl/vvx-dagster/schema/: schema_vvv_src5.py
vvx_etl/vvx_etl/: array_columns.py  bucketing.py  cli.py  schema.py  source_detection_etl.py  utils.py  validate_source_detection_etl.py
(+368 files in other folders)
