[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vvvx_etl"
version = "0.1.0"
description = "ETL pipeline with Spark and schema definitions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["vvvx_etl"]
