[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vvx_etl"
version = "0.1.0"
description = "ETL pipeline with Spark and schema definitions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
vvxetl = "vvx_etl.__main__:pipeline"