[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vvx_etl"
version = "0.1.0"
description = "ETL pipeline for science archives"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
vvxetl = "vvx_etl.cli:main"

[tool.setuptools]
packages = ["vvx_etl"]