[project]
name = "vvx_dagster"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "dagster==1.11.3",
    "dagster-deltalake>=0.27.3",
    "dagster-dg-cli>=1.11.3",
    "dagster-iceberg[spark]>=0.3.3",
    "dagster-webserver>=1.11.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "vvx_dagster"
registry_modules = [
    "vvx_dagster.components.*",
]


